--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ h1 {
        margin: 5px;
        position: relative;
 	background: #141214;;
-	backface-visibility: hidden;
+	font-size: 0;
 	color: #ffffff;
 	border-radius: 5px;
 	cursor: pointer;
@@ -75,7 +75,7 @@ h1 {
 }
 
 .deck .card.open {
-	transform: rotateY(0);
+	transform: rotateY(180deg);
 	background: #523091;;
 	cursor: default;
 	animation-name: flipInY;
@@ -111,6 +111,20 @@ h1 {
 	opacity: 0.9;
 }
 
+.front-face,
+.back-face {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  position: absolute;
+  border-radius: 5px;
+  background: #1C7CCC;
+  backface-visibility: hidden;
+}
+
+.front-face {
+  transform: rotateY(180deg);
+}
 
 /*
  * Styles for the Score Panel
