--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ h1 {
 }
 
 .deck .card.open {
-	transform: rotateY(180deg);
+	transform: rotateY(0);
 	background: #523091;;
 	cursor: default;
 	animation-name: flipInY;
