--- a/icons.fallback.css
+++ b/icons.fallback.css
@@ -1,30 +1,30 @@
 
-.icon-lactose btrans {
+.icon-lactose-btrans {
 	background-image: url('png/lactose btrans.png');
 	background-repeat: no-repeat;
 }
 
-.icon-lactose gtrans {
+.icon-lactose-gtrans {
 	background-image: url('png/lactose gtrans.png');
 	background-repeat: no-repeat;
 }
 
-.icon-lysine btrans {
+.icon-lysine-btrans {
 	background-image: url('png/lysine btrans.png');
 	background-repeat: no-repeat;
 }
 
-.icon-lysine gtrans {
+.icon-lysine-gtrans {
 	background-image: url('png/lysine gtrans.png');
 	background-repeat: no-repeat;
 }
 
-.icon-triglyceride btrans {
+.icon-triglyceride-btrans {
 	background-image: url('png/triglyceride btrans.png');
 	background-repeat: no-repeat;
 }
 
-.icon-triglyceride gtrans {
+.icon-triglyceride-gtrans {
 	background-image: url('png/triglyceride gtrans.png');
 	background-repeat: no-repeat;
 }
