--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('/fonts/icomoon.eot?izxy4q');
-  src:  url('/fonts/icomoon.eot?izxy4q#iefix') format('embedded-opentype'),
-    url('/fonts/icomoon.ttf?izxy4q') format('truetype'),
-    url('/fonts/icomoon.woff?izxy4q') format('woff'),
-    url('/fonts/icomoon.svg?izxy4q#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?izxy4q');
+  src:  url('../fonts/icomoon.eot?izxy4q#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?izxy4q') format('truetype'),
+    url('../fonts/icomoon.woff?izxy4q') format('woff'),
+    url('../fonts/icomoon.svg?izxy4q#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
