--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+ @font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?12c2u8');
+  src:  url('../fonts/icomoon.eot?12c2u8#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?12c2u8') format('truetype'),
+    url('../fonts/icomoon.woff?12c2u8') format('woff'),
+    url('../fonts/icomoon.svg?12c2u8#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.icon {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 html {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
